# past_news

./: .env.example  .gitignore  .vercelignore  DEBUGGING_NOTES.md  README.md  pyproject.toml  requirements.txt  vercel.json  vercel_reqs.txt
api/: __init__.py  article_selector.py  guardian_client.py  hello.py  index.py  news_cache.py  nodeps.py  simple.py  test.py
docs/: script.js  styles.css
frontend/: index.html  script.js  styles.css
src/: article_selector.py  date_calculator.py  news_cache.py
tests/: test_article_selector.py  test_date_calculator.py  test_guardian_client.py  test_integration.py  test_news_cache.py
